<resources>
    <string name="app_name">KokoMap</string>

    <string name="action_settings">Settings</string>
    <string name="action_satellite">Satellite</string>
    <string name="pref_category_title_app" translatable="false">App</string>
    <string name="pref_app_dest_folder_title">Destination folder of the image</string>
    <string name="pref_app_dest_folder_key" translatable="false">dest_folder</string>
    <string name="pref_category_title_summary">Summary</string>
    <string name="pref_summary_oss_key" translatable="false">oss</string>
    <string name="pref_summary_oss_title">Open Source License</string>
    <string name="pref_summary_version_key" translatable="false">app_version</string>
    <string name="pref_summary_version_title">Build Version</string>
    <string name="pref_summary_version_summary" translatable="false">Ver: %1$s</string>
    <string name="dest_dir" translatable="false">kokomap</string>
    <string name="dest_file_name" translatable="false">kokomap_%1$s.jpg</string>
    <string name="marker_title">Here</string>
    <string name="marker_snippet_hint">30 characters</string>
    <string name="dialog_title_balloon">Balloon of Content</string>
    <string name="dialog_progress_save">Saving the map image …</string>
    <string name="text_done">Done</string>
    <string name="text_retake">Retake</string>
    <string name="text_save">Save</string>
    <string name="dialog_title_preview">Preview</string>
    <string name="snackbar_saved">Saved</string>
    <string name="snackbar_failed_save">Failed to save</string>
    <string name="snackbar_denied_location">Do not move automatically to the current position</string>
</resources>
